# aligator

./: .clang-format  .cmake-format.yaml  .gersemirc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATIONS.bib  CMakeLists.txt  LICENSE  README.md  extra-python-macros.cmake  flake.nix  package.xml  pixi.toml  pyproject.toml  setup.cfg  tracy.cmake
bench/: CMakeLists.txt  croc-talos-arm.cpp  gar-impl-multithread.cpp  gar-riccati.cpp  gar.cpp  lqr.cpp  multithreading.cpp  se2-car.cpp  talos-walk.cpp
bindings/python/: CMakeLists.txt  expose-costs.cpp  module.cpp
bindings/python/aligator/: __init__.py
bindings/python/aligator/utils/: plotting.py
bindings/python/modelling/: expose-cost-ops.cpp
bindings/python/src/: expose-callbacks.cpp  expose-cartesian-product.cpp  expose-common-model.cpp  expose-constraint-set.cpp  expose-constraint.cpp  expose-costs.cpp  expose-filter.cpp  expose-functions.cpp  expose-gar.cpp  expose-manifold.cpp  expose-pinocchio-features.cpp  expose-problem.cpp  expose-solver-fddp.cpp  expose-solver-prox.cpp  expose-solvers-base.cpp  expose-stage-data.cpp  expose-stage.cpp  expose-unary-functions.cpp  expose-utils.cpp  module.cpp
bindings/python/src/compat/: expose-croco-compat.cpp
bindings/python/src/gar/: expose-dense.cpp  (+5 more)
compat/crocoddyl/: CMakeLists.txt
examples/: CMakeLists.txt  __init__.py  acrobot.py  arm_dynamics.py  arm_reach.py  car_park.py  cartpole.py  centroidal.py  clqr.cpp  common.py  continuous-centroidal.py  convert_to_nlp.py  croc-talos-arm.cpp  croc-talos-arm.hpp  croc_arm_manipulation.py  croc_humanoid_manipulation.py  croc_lqr.py  custom_functions.py  gar-cycle-lqr-1d.py  gar-cycle-lqr-2d.py  gar-cycle-lqr.py  gar-elqr.py  gar-lqr-join.py  linear_euler.py  lqr.cpp  lqr.py  partial_initial_condition.py  pendulum.py  quadrotor.py  quadrotor_obstacles.py  rollouts_bench.py  se2-car.cpp  se2-car.hpp  se2_car.cpp  se2_twist.py  solo_bend.py  solo_jump.py  solo_kinodynamics.py  solo_utils.py  talos-arm.cpp  (+13 more)
examples/bench/: croc-talos-arm.cpp  croc-talos-arm.hpp  lqr.cpp  multithreading.cpp
examples/python/: stage_model.py  utils.py
examples/utils/: __init__.py  solo.py
gar/: CMakeLists.txt  README.md
gar/src/: cholmod-solver.cpp  dense-riccati.cpp  helpers.cpp  lqr-problem.cpp  mem-req.cpp  parallel-solver-tbb.cpp  parallel-solver.cpp  proximal-riccati.cpp  riccati-base.cpp  riccati-impl.cpp  riccati.cpp  utils.cpp
python/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  context.hpp  costs.cpp  costs.hpp  dynamics-continuous.hpp  dynamics.hpp  eigen-member.hpp  eigen_member.hpp  expose-callbacks.cpp  expose-constraint.cpp  expose-costs.cpp  expose-fddp.cpp  expose-functions.cpp  expose-node.cpp  expose-pin-features.cpp  expose-pinocchio-features.cpp  expose-problem.cpp  expose-solver-fddp.cpp  expose-solver-prox.cpp  expose-solvers-base.cpp  expose-solvers.cpp  expose-stage.cpp  expose-utils.cpp  functions.cpp  functions.hpp  fwd.hpp  macros.hpp  module.cpp  problem.cpp  solvers.cpp  stage.cpp  util.hpp  utils.hpp  visitors.hpp
python/compat/: croco.hpp  expose-croco-compat.cpp
python/modelling/: constraintfwd.cpp  continuous.cpp  continuous.hpp  dynamics.cpp  dynamics.hpp  explicit-dynamics.hpp  expose-autodiff.cpp  expose-center-of-mass-translation.cpp  expose-center-of-mass.cpp  expose-composite-costs.cpp  expose-constraintfwd.cpp  expose-continuous-dynamics.cpp  expose-continuous.cpp  expose-cost-ops.cpp  expose-dynamics.cpp  expose-explicit-dynamics.cpp  expose-fly-high.cpp  expose-freefwd.cpp  expose-function-ops.cpp  expose-integrators.cpp  expose-pinocchio-functions.cpp  freefwd.cpp  integrators.cpp  multibody-utils.hpp
python/proxddp/: __init__.py
python/proxddp/utils/: plotting.py
python/utils/: deprecation.hpp  optional.hpp
src/compat/crocoddyl/: CMakeLists.txt  action-model-wrap.cpp  cost-wrap.cpp  instantiate.cpp  problem-wrap.cpp  state-wrap.cpp
src/gar/: CMakeLists.txt  cholmod-solver.cpp  dense-kernel.cpp  dense-riccati.cpp  lqr-knot.cpp  lqr-problem.cpp  parallel-solver.cpp  parlqr.cpp  proximal-riccati.cpp  riccati-base.cpp  riccati-kernel.cpp  riccati.cpp  utils.cpp
tests/: CMakeLists.txt  arena-matrix.cpp  block-matrix.cpp  common.cpp  constraint-product.cpp  constraints.cpp  continuous.cpp  costs.cpp  cycling.cpp  forces.cpp  gar-riccati.cpp  generate-problem.hpp  integrators.cpp  linesearch.cpp  lqr.cpp  managed-matrix.cpp  manifolds.cpp  mpc-cycle.cpp  nomalloc.cpp  parallel-lqr.cpp  problem.cpp  schur3x3.cpp  simple-mpc.cpp  solver-storage.cpp  test_util.hpp  utils.cpp
tests/compat/: CMakeLists.txt  croc-action-model.cpp  croc-problem.cpp
tests/gar/: CMakeLists.txt  block-matrix.cpp  cholmod.cpp  eigen-map.cpp  eigen-mapped-pmr.cpp  knot.cpp  matrix-array.cpp  mem-req.cpp  parallel.cpp  riccati.cpp  run-parallel.cpp  test_util.cpp  test_util.hpp  util.cpp  util.hpp
tests/pixi_build/: CMakeLists.txt
tests/python/: CMakeLists.txt  bind_optional.cpp  bind_virtual_factory.cpp  create_data_ext.cpp  example_problem.py  test_bind_virtual.py  test_center_of_mass.py  test_centroidal.py  test_compat_croc.py  test_constrained_dynamics.py  test_constraint_dynamics.py  test_contact_force.py  test_continous_dynamics.py  test_continuous_dynamics.py  test_copy_result.py  test_costs.py  test_custom_pyfunctions.py  test_custom_python_classes.py  test_dynamics.py  test_example_problem.py  test_fddp.py  test_finite_diff.py  test_frames.py  test_functions.py  test_gravity_compensation.py  test_integrators.py  test_kinodynamics.py  test_mpc.py  test_ode.py  test_optional.py  test_rollout.py  test_solver.py  utils.py
tests/test_util/: pinocchio.hpp
unittest/: CMakeLists.txt  euler.cpp  generate-problem.hpp  integrators.cpp  node.cpp  problem.cpp  solver-storage.cpp  stage-model.cpp
unittest/python/: create_dae.py  explicit_dynamics.py  node.py  test_continous_dynamics.py  test_costs.py  test_custom_pyfunc.py  test_custom_pyfunctions.py  test_example_problem.py  test_exp_dynamics.py  test_explicit_dynamics.py  test_ode.py
(+888 files in other folders)
